<resources>
    <string name="app_name">Quản lý chi tiêu</string>

    <string name="menu_khoanthu">Thu nhập</string>
    <string name="menu_khoanchi">Chi tiêu</string>
    <string name="menu_thongke">Thống kê</string>
    <string name="menu_dangxuat">Đăng xuất</string>
    <string name="menu_thoat">Thoát</string>
    <string name="menu_home">Trang chủ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">892943285101000</string>
    <string name="fb_login_protocol_scheme">fb892943285101000</string>
</resources>